# kamp

./: .gitignore  .travis.yml  Dockerfile  README.md  build-docker-image.bat  build-linux-plugin.bat  build.bat  build.gradle  build.gradle.kts  build.sh  settings.gradle  settings.gradle.kts
api/: build.gradle
api-codegen/: build.gradle
buildSrc/: build.gradle  build.gradle.kts
docker/: Dockerfile
examples/amx-interop-test/: build.gradle.kts
examples/hooks/: build.gradle.kts
examples/lvdm/: build.gradle  build.gradle.kts
examples/streamer-test/: .gitignore  build.gradle.kts
examples/view-test/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
kamp-annotation-processor/: build.gradle  build.gradle.kts
kamp-api/: build.gradle
kamp-codegen/: build.gradle
kamp-common/: build.gradle.kts
kamp-core/: build.gradle  build.gradle.kts
kamp-core/Kamp/data/: config.properties
kamp-geodata/: .gitignore  build.gradle  build.gradle.kts
kamp-plugin/: .gitignore  build.gradle  build.gradle.kts
kamp-plugin/src/main/cpp/: AmxNativeFunctionInvoker.cpp  FieldCache.cpp  FieldCache.hpp  Kamp.cpp
kamp-plugin/src/main/cpp/sampgdk/plugins/kamp/: CMakeLists.txt  FieldCache.cpp  FieldCache.hpp  Kamp.cpp  Kamp.hpp  SAMPCallbacks.def
kamp-plugin/src/main/headers/: Kamp.hpp  (+1 more)
kamp-runtime/: build.gradle
kamp-streamer/: build.gradle  build.gradle.kts
kamp-view/: build.gradle  build.gradle.kts
plugin/: .gitignore  build.gradle
plugin/sampgdk/plugins/: CMakeLists.txt
plugin/src/main/cpp/sampgdk/plugins/kamp/: CMakeLists.txt  Kamp.cpp  Kamp.hpp
(+2275 files in other folders)
